--- a/index.html
+++ b/index.html
@@ -59,27 +59,20 @@
         </nav>
     </header>
 
-    <!-- Sección Slider -->
+    <!-- Sección Carousel -->
     <section>
         <div class="container-fluid carousel px-0">
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-                        aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-                        aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                        aria-label="Slide 3"></button>
-                </div>
+                
                 <div class="carousel-inner">
                     <div class="carousel-item active w-auto">
-                        <img src="assets/img/carousel1.jpg" class="carousel-img" alt="Norte de Chile">
+                        <img src="assets/img/carousel1.jpg" class="carousel-img " alt="">
                     </div>
                     <div class="carousel-item">
-                        <img src="assets/img/carousel2.jpg" class="carousel-img" alt="Rapa Nui">
+                        <img src="assets/img/carousel2.jpg" class="carousel-img" alt="">
                     </div>
                     <div class="carousel-item">
-                        <img src="assets/img/carousel3.jpg" class="carousel-img" alt="Sur de Chile">
+                        <img src="assets/img/carousel3.jpg" class="carousel-img" alt="">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
