--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <section>
         <div class="container-fluid carousel px-0">
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-                
+
                 <div class="carousel-inner">
                     <div class="carousel-item active w-auto">
                         <img src="assets/img/carousel1.jpg" class="carousel-img " alt="">
@@ -101,17 +101,21 @@
                         <i class="fa-solid fa-plane"></i>
                     </div>
 
-                    <h3 class="my-3 text-center">Servicios</h3>
-                    <p>Desde el norte con el desierto más árido del mundo, hasta el sur austral con hielos
-                        milenarios, Chile es una invitación difícil de rechazar. Te damos experiencias únicas de
-                        viajes, hotelería y gastronomía. ¡Asómbrate con viajes Chile!</p>
+                    <h3 class="my-3 text-center">Lorem ipsum dolor sit amet</h3>
+                    <p>consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                        deserunt mollit anim id est laborum.</p>
                 </div>
 
                 <div class="col-xs-12 col-md-4 my-5">
-                    <h3 class="my-3 text-center">Actividades</h3>
-                    <p>Recorre bosques, salares, glaciares y conoce una extensa variedad de flora y fauna nativa.
-                        Ponte zapatos cómodos y camina por la naturaleza, la mejor manera de conocer Chile. Si te
-                        gusta la adrenalina, hablemos de aventura por ríos y fiordos.</p>
+                    <h3 class="my-3 text-center">Lorem ipsum dolor sit amet</h3>
+                    <p>consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                        deserunt mollit anim id est laborum.</p>
                     <div class="serv text-center">
                         <i class="fa-solid fa-mountain"></i>
                     </div>
@@ -122,10 +126,12 @@
                         <i class="fa-solid fa-route"></i>
                     </div>
 
-                    <h3 class="my-3 text-center">Itinerarios</h3>
-                    <p>¿Quieres planificar un nuevo viaje? Ya sea de un día o más, compartimos contigo los mejores
-                        itinerarios para descubrir nuestro país, destacando las actividades que no te puedes perder, los
-                        kilómetros que tendrás que recorrer y como llegar.</p>
+                    <h3 class="my-3 text-center">Lorem ipsum dolor sit amet</h3>
+                    <p>consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                        deserunt mollit anim id est laborum.</p>
                 </div>
             </div>
 
@@ -144,10 +150,15 @@
                     <div class="card my-3 mx-auto">
                         <img class="card-img-top" src="assets/img/card1.jpg" alt="Patagonia chilena">
                         <div class="card-body">
-                            <h5 class="card-title-01 fw-bold text-dark text-center my-3" data-bs-toggle="tooltip" data-bs-placement="top"
-                                title="'Haz click para ver efecto toggle'">Patagonia chilena</h5>
-                            <p class="card-text-01">Una naturaleza casi inalterada plagada de montañas, fiordos,
-                                glaciares, bosques y el encanto austral.</p>
+                            <h5 class="card-title-01 fw-bold text-dark text-center my-3" data-bs-toggle="tooltip"
+                                data-bs-placement="top" title="'Haz click para ver efecto toggle'">Lorem ipsum dolor sit amet
+                            </h5>
+                            <p class="card-text-01">consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                                ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+                                reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+                                sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+                                est laborum.</p>
                         </div>
                     </div>
                 </div>
@@ -156,10 +167,14 @@
                     <div class="card my-3 mx-auto">
                         <img class="card-img-top" src="assets/img/card2.jpg" alt="Laguna Lejia - Antofagasta">
                         <div class="card-body">
-                            <h5 class="card-title-02 fw-bold text-dark text-center my-3" data-bs-toggle="tooltip" data-bs-placement="top"
-                                title="'Haz click para ver efecto toggle'">Laguna Lejia (Antofagasta)</h5>
-                            <p class="card-text-02">Una belleza del altiplano del norte de Chile a una altura
-                                de 4.350 mts sobre el nivel del mar.</p>
+                            <h5 class="card-title-02 fw-bold text-dark text-center my-3" data-bs-toggle="tooltip"
+                                data-bs-placement="top" title="'Haz click para ver efecto toggle'">Lorem ipsum dolor sit amet</h5>
+                            <p class="card-text-02">consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                                ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+                                reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+                                sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+                                est laborum.</p>
                         </div>
                     </div>
                 </div>
@@ -168,10 +183,14 @@
                     <div class="card my-3 mx-auto">
                         <img class="card-img-top" src="assets/img/card3.jpg" alt="Salar de Atacama">
                         <div class="card-body">
-                            <h5 class="card-title-03 fw-bold text-dark text-center my-3" data-bs-toggle="tooltip" data-bs-placement="top"
-                                title="'Haz click para ver efecto toggle'">Salar de Atacama</h5>
-                            <p class="card-text-03">Conoce el mayor depósito salino de Chile y es uno de los 
-                                lugares más turísticos del norte del pais.</p>
+                            <h5 class="card-title-03 fw-bold text-dark text-center my-3" data-bs-toggle="tooltip"
+                                data-bs-placement="top" title="'Haz click para ver efecto toggle'">Lorem ipsum dolor sit amet</h5>
+                            <p class="card-text-03">consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                                ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+                                reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+                                sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+                                est laborum.</p>
                         </div>
                     </div>
                 </div>
@@ -180,10 +199,15 @@
                     <div class="card my-3 mx-auto">
                         <img class="card-img-top" src="assets/img/card4.jpg" alt="Bosque Valdiviano">
                         <div class="card-body">
-                            <h5 class="card-title-04 fw-bold text-dark text-center my-3" data-bs-toggle="tooltip" data-bs-placement="top"
-                                title="'Haz click para ver efecto toggle'">Bosque Valdiviano</h5>
-                            <p class="card-text-04">La lluvia cae intensamente en los bosques milenarios.
-                                Turismo aventura en paraisos verdes.</p>
+                            <h5 class="card-title-04 fw-bold text-dark text-center my-3" data-bs-toggle="tooltip"
+                                data-bs-placement="top" title="'Haz click para ver efecto toggle'">Lorem ipsum dolor sit amet
+                            </h5>
+                            <p class="card-text-04">consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                                ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+                                reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+                                sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+                                est laborum</p>
                         </div>
                     </div>
                 </div>
