--- a/index.html
+++ b/index.html
@@ -151,7 +151,8 @@
                         <img class="card-img-top" src="assets/img/card1.jpg" alt="Patagonia chilena">
                         <div class="card-body">
                             <h5 class="card-title-01 fw-bold text-dark text-center my-3" data-bs-toggle="tooltip"
-                                data-bs-placement="top" title="'Haz click para ver efecto toggle'">Lorem ipsum dolor sit amet
+                                data-bs-placement="top" title="'Haz click para ver efecto toggle'">Lorem ipsum dolor sit
+                                amet
                             </h5>
                             <p class="card-text-01">consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                                 labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
@@ -168,7 +169,8 @@
                         <img class="card-img-top" src="assets/img/card2.jpg" alt="Laguna Lejia - Antofagasta">
                         <div class="card-body">
                             <h5 class="card-title-02 fw-bold text-dark text-center my-3" data-bs-toggle="tooltip"
-                                data-bs-placement="top" title="'Haz click para ver efecto toggle'">Lorem ipsum dolor sit amet</h5>
+                                data-bs-placement="top" title="'Haz click para ver efecto toggle'">Lorem ipsum dolor sit
+                                amet</h5>
                             <p class="card-text-02">consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                                 labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
                                 ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
@@ -184,7 +186,8 @@
                         <img class="card-img-top" src="assets/img/card3.jpg" alt="Salar de Atacama">
                         <div class="card-body">
                             <h5 class="card-title-03 fw-bold text-dark text-center my-3" data-bs-toggle="tooltip"
-                                data-bs-placement="top" title="'Haz click para ver efecto toggle'">Lorem ipsum dolor sit amet</h5>
+                                data-bs-placement="top" title="'Haz click para ver efecto toggle'">Lorem ipsum dolor sit
+                                amet</h5>
                             <p class="card-text-03">consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                                 labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
                                 ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
@@ -200,7 +203,8 @@
                         <img class="card-img-top" src="assets/img/card4.jpg" alt="Bosque Valdiviano">
                         <div class="card-body">
                             <h5 class="card-title-04 fw-bold text-dark text-center my-3" data-bs-toggle="tooltip"
-                                data-bs-placement="top" title="'Haz click para ver efecto toggle'">Lorem ipsum dolor sit amet
+                                data-bs-placement="top" title="'Haz click para ver efecto toggle'">Lorem ipsum dolor sit
+                                amet
                             </h5>
                             <p class="card-text-04">consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                                 labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
