--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="description" content="Viajes Chile">
     <meta name="robots" content="index" />
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel='icon' href='./assets/img/viajes.svg' type='image/x-icon' sizes="16x16" />
 
     <!--Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
