--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <!--Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fascinate&family=Oswald:wght@300;400&display=swap"
+        rel="stylesheet">
 
     <!--Icons-->
     <script src="https://kit.fontawesome.com/81202f0fd6.js" crossorigin="anonymous"></script>
@@ -231,33 +232,26 @@
                     <form class="my-5">
                         <div class="mb-4">
                             <label for="disabledTextInput" class="form-label">
-                                <i class="fa-solid fa-user"></i>Nombre
+                                <i class=""></i>Nombre
                             </label>
                             <input type="text" id="disabledTextInput" class="form-control" data-toggle="tooltip"
                                 data-placement="top" title="Agrega tu nombre y apellido">
                         </div>
                         <div class="mb-4">
                             <label for="exampleInputEmail1" class="form-label">
-                                <i class="fa-solid fa-envelope"></i>Mail
+                                <i class=""></i>Mail
                             </label>
                             <input type="email" class="form-control" id="exampleInputEmail1"
                                 aria-describedby="emailHelp" data-toggle="tooltip" data-placement="top"
-                                title="Agrega un correo donde responderte">
-                        </div>
-                        <div class="mb-4">
-                            <label for="disabledTextInput" class="form-label">
-                                <i class="fa-solid fa-circle-exclamation"></i>Asunto
-                            </label>
-                            <input type="text" id="disabledTextInput" class="form-control" data-toggle="tooltip"
-                                data-placement="top" title="Agrega el motivo de tu mensaje">
+                                title="Agrega un correo">
                         </div>
                         <div class="mb-4">
                             <label for="exampleFormControlTextarea1" class="form-label">
-                                <i class="fa-solid fa-comment-dots"></i>Mensaje
+                                <i class=""></i>Mensaje
                             </label>
                             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
                                 data-toggle="tooltip" data-placement="top"
-                                title="Danos mas detalles para ayudarte"></textarea>
+                                title="Escrfibe aquí tu mensaje"></textarea>
                         </div>
                         <button id="enviarCorreo" type="submit" class="btn btn-outline-info btn-lg px-5">Enviar</button>
                     </form>
@@ -275,7 +269,7 @@
                 </div>
                 <div class="col-xs-12 col-md-4">
                     <ul class="d-flex list-unstyled justify-content-center">
-                        <li><i class="fa-brands fa-github-square"></i></li>
+                        <li><i class="fa-brands fa-github-square" src="https://github.com/dpintok"></i></li>
                         <li><i class="fa-brands fa-linkedin"></i></li>
                         <li><i class="fa-brands fa-twitter-square"></i></li>
                         <li><i class="fa-brands fa-facebook-square"></i></li>
