--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                             </label>
                             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
                                 data-toggle="tooltip" data-placement="top"
-                                title="Escrfibe aquí tu mensaje"></textarea>
+                                title="Escribe aquí tu mensaje"></textarea>
                         </div>
                         <button id="enviarCorreo" type="submit" class="btn btn-outline-info btn-lg px-5">Enviar</button>
                     </form>
@@ -269,7 +269,7 @@
                 </div>
                 <div class="col-xs-12 col-md-4">
                     <ul class="d-flex list-unstyled justify-content-center">
-                        <li><i class="fa-brands fa-github-square" src="https://github.com/dpintok"></i></li>
+                        <li><i class="fa-brands fa-github-square"></i></li>
                         <li><i class="fa-brands fa-linkedin"></i></li>
                         <li><i class="fa-brands fa-twitter-square"></i></li>
                         <li><i class="fa-brands fa-facebook-square"></i></li>
